Mobile overhaul: fix grids for small screens, add mobile menu, reduce hero heading on mobile, ensure product CTAs visible on touch, correct tablet grid widths

--- a/assets/base.css
+++ b/assets/base.css
@@ -93,7 +93,7 @@ a:hover {
 
 @media screen and (min-width: 750px) {
   .grid--2-col-tablet .grid__item {
-    width: calc(33.33% - var(--grid-desktop-horizontal-spacing));
+    width: calc(50% - var(--grid-desktop-horizontal-spacing));
   }
   
   .grid--3-col-tablet .grid__item {
